# mortgage-calculator

./: .gitignore  Dockerfile  Makefile  README.md  mortgage-calc-2.py  mortgage-calculator.py  pyproject.toml  requirements.txt
cdk/: .gitignore  app.py  cdk.context.json
data/: .gitignore  census_data.csv
data_pull/: README.md  census.py  census_acs.py  census_geojson.py  census_process.py  census_state_zip_map.py  convert_shapefiles.py  data_pull.py  zillow.py
load_test/: locustfile.py
maps/: maps.py  state_fips.py  zip_codes.py  zipcode_map.py  zipcodes.py
mortgage_calculator/: archive.py  calculator.py  legacy.py  mortgage_calculator.py  mortgage_calculator_checkpoint.py  populate_data.py  rent_comparison_simulator.py  run.py  sandbox.py  session_state_interface.py  session_state_keys.py  st_text.py  streamlit_app.py  style.css  tab_style.css  text_blobs.py  utils.py  utils_finance.py  utils_inputs.py
mortgage_calculator/.ipynb_checkpoints/: calculator-checkpoint.py
mortgage_calculator/data/: city_housing_data.csv
mortgage_calculator/notebooks/.ipynb_checkpoints/: simulation-checkpoint.ipynb
mortgage_calculator/pages/: data_page.py
notebooks/: data_EDA.ipynb  simulation.ipynb  zipcode_map.ipynb
redfin/: EDA.ipynb
src/: calculator.py  mortgage_calculator.py  text_blobs.py  utils.py
tests/: test.py  test_utils_finance.py
