[tool.poetry]
name = "mortgage_calculator"
version = "0.1.0"
description = "A mortgage simulator"
authors = ["Caleb Crouse"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
numpy-financial = "^1.0.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
jupyter = "^1.0.0"
itables = "^1.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
